@@ -1,3 +1,9 @@
+TAG: genotypeload-6-0-11-1
+DATE: 03/12/2019
+STAFF: lec 
+CHANGES:
+1) TR13009/genotypes can only used Approved, Autoload alleles
+
 TAG: genotypeload-6-0-9-1
 DATE: 04/06/2017
 STAFF: lec 
